--- a/src/main/resources/bootstrap-local.yaml
+++ b/src/main/resources/bootstrap-local.yaml
@@ -2,4 +2,6 @@ spring:
   application:
     name: fitBuddy
   config:
-    import: configserver:http://newkayak.iptime.org:8888
+    activate:
+      on-profile: local
+    import: optional:configserver:http://newkayak.iptime.org:8888
