--- a/build.gradle
+++ b/build.gradle
@@ -57,12 +57,19 @@ dependencies {
 
 
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 
 
+    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.11.0'
+    testImplementation group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
+    testImplementation 'org.springframework.security:spring-security-test'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.batch:spring-batch-test'
-    testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.mockito:mockito-core:5.11.0'
+
+
+
 }
 
 dependencyManagement {
