--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -10,3 +10,8 @@ spring:
       - classpath:config/mongo.yaml
       - classpath:config/redis.yaml
 
+security:
+  ignore-jwt:
+    - '/v1/user/sign/*'
+  ignore-xss:
+    - '/'
