--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -19,3 +19,11 @@ security:
     - '/'
 
 
+logging:
+  level:
+    org:
+      springframework:
+        data:
+          mongodb:
+            core:
+              MongoTemplate: DEBUG
