--- a/src/test/resources/config/security.yaml
+++ b/src/test/resources/config/security.yaml
@@ -1,4 +1,7 @@
 security:
-
-  #  jwt-ignore:
-  #  xss-ignore:
+  ignore-jwt:
+    - '/v1/user/sign/*'
+    - '/v1/user/verify/*'
+    - '/v1/user/sync/*'
+  ignore-xss:
+    - '/'
