--- a/src/test/resources/config/security.yaml
+++ b/src/test/resources/config/security.yaml
@@ -3,6 +3,7 @@ security:
     - '/v1/user/sign/*'
     - '/v1/user/verify/*'
     - '/v1/user/sync/*'
+    - '/v1/buddy/**/*'
     - '/v1/buddy/*'
   ignore-xss:
     - '/'
