--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,13 @@ dependencies {
 
 }
 
+//swagger
+dependencies {
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-common:2.3.0'
+}
+
+
 ///// JWT
 dependencies {
     implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
