--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Java 21
         uses: actions/setup-java@v4
         with:
-          java-version: '21'
+          java-version: '17'
           distribution: 'temurin'
       - name: Gradle
         uses: gradle/actions/setup-gradle@v4
@@ -22,7 +22,8 @@ jobs:
         run: ./gradlew -x test build
 
 
-  deploy:
+  deploy-phase:
+    needs: build-phase
     runs-on: ubuntu-latest
     permissions:
       contents: write
