--- a/.github/workflows/github-action.yaml
+++ b/.github/workflows/github-action.yaml
@@ -14,10 +14,15 @@ jobs:
       - name: Java 21
         uses: actions/setup-java@v4
         with:
-          java-version: '17'
-          distribution: 'temurin'
+          java-version: '21'
+          distribution: 'corretto'
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
       - name: Gradle
         uses: gradle/actions/setup-gradle@v4
+
       - name: Build
         run: ./gradlew -x test build
 
